test/errors/type/collections/set/tostr.yasl
echo collections.set().tostr(1)
